; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_like.c_SB_lower_char.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_like.c_SB_lower_char.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8 (i8, %struct.TYPE_5__*, i32)* @SB_lower_char to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal signext i8 @SB_lower_char(i8 zeroext %0, %struct.TYPE_5__* %1, i32 %2) #0 {
  %4 = alloca i8, align 1
  %5 = alloca i8, align 1
  %6 = alloca %struct.TYPE_5__*, align 8
  %7 = alloca i32, align 4
  store i8 %0, i8* %5, align 1
  store %struct.TYPE_5__* %1, %struct.TYPE_5__** %6, align 8
  store i32 %2, i32* %7, align 4
  %8 = load i32, i32* %7, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %3
  %11 = load i8, i8* %5, align 1
  %12 = call signext i8 @pg_ascii_tolower(i8 zeroext %11)
  store i8 %12, i8* %4, align 1
  br label %16

13:                                               ; preds = %3
  %14 = load i8, i8* %5, align 1
  %15 = call signext i8 @pg_tolower(i8 zeroext %14)
  store i8 %15, i8* %4, align 1
  br label %16

16:                                               ; preds = %13, %10
  %17 = load i8, i8* %4, align 1
  ret i8 %17
}

declare dso_local signext i8 @pg_ascii_tolower(i8 zeroext) #1

declare dso_local signext i8 @pg_tolower(i8 zeroext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
